--- a/Server/package.json
+++ b/Server/package.json
@@ -3,15 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+
+  "type": "module",
+
+  "engines": {
+    "node": ">=18"
+  },
+
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
+
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
@@ -29,3 +37,4 @@
     "razorpay": "^2.9.6"
   }
 }
+
